--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
     font-family: 'Roboto', sans-serif;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 nav{
     height: 80px;
     display: flex;
@@ -138,6 +147,8 @@ button:active{
     margin: 0 auto;
 }
 
+
+
 /*
 
 HIGHLIGHTS
@@ -145,35 +156,31 @@ HIGHLIGHTS
 */
 
 #highlights{
+    padding-top: 4vw;
     position: relative;
 }
 
-#highlights:before{
-    background: url('./assets/wave.svg');
-    content: "";
-    position: absolute;
-    width: 101vw;
-    height: 12vw;
-    top: 1px;
-    left: 0;
-    z-index: 1;
-    background-size: cover;
-    background-repeat: no-repeat;
-    transform: translateY(-100%);
-}
-
+#highlights:before,
 #highlights:after{
     background: url('./assets/wave.svg');
     content: "";
     position: absolute;
     width: 101vw;
     height: 12vw;
-    bottom: 1px;
     left: 0;
     z-index: 1;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+#highlights:before{
+    transform: translateY(-100%);
+    top: 1px;
+}
+
+#highlights:after{
     transform: translateY(100%) rotate(180deg);
+    bottom: 1px;
 }
 
 .highlight__wrapper{
@@ -221,8 +228,58 @@ FEATURES
 */
 
 #features{
+    padding-top: 8vw;
     background-color: rgba(115, 66, 214, 0.1);
-    height: 1000px;
+}
+
+.books{
+    display: flex;
+}
+
+.book{
+    width: 25%;
+    padding: 24px;
+}
+
+.book__img{
+    max-height: 300px;
+    transition: all 300ms ease;
+    cursor: no-drop;
+}
+
+.book__img--wrapper{
+    margin-bottom: 4px;
+    border-radius: 4px;
+    overflow: hidden;
+    display: flex;
+}
+
+.book:hover .book__img{
+    transform: scale(1.03);
+}
+
+.book__title{
+    font-size: 20px;
+    margin-bottom: 8px;
+}
+
+.book__title:hover{
+    text-decoration: underline;
+}
+
+.book__ratings{
+    margin-bottom: 8px;
+    color: #fabf2a;
+}
+
+.book__price{
+
+}
+
+.book__price--normal{
+    text-decoration: line-through;
+    padding-right: 6px;
+    color: #bfbfbf;
 }
 
 
