--- a/style.css
+++ b/style.css
@@ -7,18 +7,13 @@
     font-family: 'Roboto', sans-serif;
 }
 
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
-
 nav{
     height: 80px;
     display: flex;
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 img{
@@ -29,6 +24,10 @@ img{
 
 p{
     line-height: 1.5;
+}
+
+a:hover{
+    text-decoration: underline;
 }
 
 .purple{
@@ -78,6 +77,18 @@ p{
     text-decoration: none;
 }
 
+.btn__menu{
+
+}
+
+/*
+
+LANDING 1:08
+
+*/
+
+
+
 #landing{
     background-color: rgba(115, 66, 214, 0.1);
 }
@@ -103,7 +114,7 @@ header{
 }
 
 h1 {
-    font-size: 56px;
+    font-size: 52px;
     color: #7342d6;
     margin-bottom: 24px;
     text-align: center;
@@ -137,7 +148,7 @@ button:active{
     z-index: 2;
 }
 
-.conatiner{
+.container{
     padding: 56px 0;
 }
 
@@ -145,6 +156,16 @@ button:active{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+}
+
+.row__column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.no-cursor{
+    cursor: not-allowed;
 }
 
 
@@ -175,7 +196,7 @@ HIGHLIGHTS
 
 #highlights:before{
     transform: translateY(-100%);
-    top: 1px;
+    top: 1px
 }
 
 #highlights:after{
@@ -211,7 +232,6 @@ HIGHLIGHTS
     align-items: center;
     border-radius: 4px; 
     font-size: 32px;
-    margin-bottom: 24px;   
 }
 
 .highlight__subtitle{
@@ -234,6 +254,7 @@ FEATURES
 
 .books{
     display: flex;
+    flex-wrap: wrap;
 }
 
 .book{
@@ -245,6 +266,7 @@ FEATURES
     max-height: 300px;
     transition: all 300ms ease;
     cursor: no-drop;
+    max-width: 200px;
 }
 
 .book__img--wrapper{
@@ -265,6 +287,7 @@ FEATURES
 
 .book__title:hover{
     text-decoration: underline;
+    cursor: no-drop;
 }
 
 .book__ratings{
@@ -272,14 +295,41 @@ FEATURES
     color: #fabf2a;
 }
 
-.book__price{
-
-}
-
 .book__price--normal{
     text-decoration: line-through;
     padding-right: 6px;
     color: #bfbfbf;
+}
+
+#explore{
+    background-color: rgba(115, 66, 214, 0.1);
+}
+
+#footer{
+    background-color: #242424;
+}
+
+.footer__logo{
+    display: flex;
+}
+
+.footer__logo--img{
+    width: 160px;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__list{
+    margin: 16px 0;
+}
+
+.footer__link{
+    text-decoration: none;
+    margin: 0 24px;
+    color: #fff;
+}
+
+.footer__copyright{
+    color: #fff;
 }
 
 
