--- a/style.css
+++ b/style.css
@@ -78,12 +78,69 @@ a:hover{
 }
 
 .btn__menu{
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #7342d6;
+    display: none;
+}
 
+.menu__backdrop{
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.menu--open .menu__backdrop{
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open{
+    max-height: 100vh;
+    overflow-y: hidden;
+}
+
+.menu__links{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__link{
+    color: white;
+    text-decoration: none;
+    font-size: 40px;
+}
+
+.menu__list{
+    padding: 32px 0;
+    list-style-type: none;
+}
+
+.btn__menu--close{
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
 }
 
 /*
 
 LANDING 1:08
+
 
 */
 
@@ -330,6 +387,16 @@ FEATURES
 
 .footer__copyright{
     color: #fff;
+}
+
+@media (max-width: 550px) {
+    .nav__links{
+        display: none;
+    }
+
+    .btn__menu{
+        display: block;
+    }
 }
 
 
