--- a/style.css
+++ b/style.css
@@ -270,7 +270,6 @@ HIGHLIGHTS
     width: calc(100% / 3);
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
 
@@ -294,6 +293,8 @@ HIGHLIGHTS
 .highlight__subtitle{
     font-size: 20px;
     margin-bottom: 16px;
+    text-align: center;
+    margin-top: 8px;
 }
 
 /*
@@ -389,6 +390,41 @@ FEATURES
     color: #fff;
 }
 
+/*
+
+SMALL PHONES, TABLETS, LARGE SMARTPHONES
+
+*/
+
+@media (max-width: 768px) {
+    .header__description {
+        padding: 0 24px;
+    }
+
+    h1{
+        font-size: 40px;
+    }
+
+    h2{
+        font-size: 26px;
+    }
+
+    button{
+        font-size: 18px;
+    }
+
+    .book{
+        width: 50%;
+    }
+}
+
+
+/*
+
+SMALL PHONES, LARGE SMARTPHONES
+
+*/
+
 @media (max-width: 550px) {
     .nav__links{
         display: none;
@@ -396,6 +432,19 @@ FEATURES
 
     .btn__menu{
         display: block;
+    }
+
+    .highlight{
+        width: 100%;
+    }
+
+    .highlight:not(:last-child)
+    {
+        margin-bottom: 24px;
+    }
+
+    .highlight__wrapper{
+        flex-wrap: wrap;
     }
 }
 
